--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -219,7 +219,7 @@ __1. Highlights.__ I will highlight the interesting parts of a book. Often, I
 take notes too as I have too many times been in the situation where returning to
 the highlight I have a hard time figuring out why I found it important at the
 time of reading. Typing on the Kindle is painful to begin with, but you get the
-hang of it eventually.  I use Readwise for working with my highlights (more on
+hang of it eventually.  I use [Readwise](https://readwise.io) for working with my highlights (more on
 this in the processing stage), and use
 [tags](https://blog.readwise.io/tag-your-highlights-while-you-read/), special
 tags [to combine highlights on the fly](https://blog.readwise.io/combine-highlights-on-the-fly/), and [their header tags](https://blog.readwise.io/add-chapters-to-highlights/) to add sections for
