read: mention re-reading and mention sending highlights

--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -294,6 +294,14 @@ the end of a (good) meeting, where someone will summarize all the actions and
 outcomes. Ever been to one where that doesn't happen? It can feel like a waste
 of time.
 
+__6. Re-read.__ The best books I will try to read again. I've done it so far for
+perhaps half a dozen books and it's been rewarding every time. In general, I
+think we can treat the best books and articles more like music playlists.
+Reading them again and again, with sufficient repetition in between to make them
+relevant and fresh anew. For articles, I have a script that'll feed them back to
+me on a spaced repetition schedule automatically in Instapaper. I wrote more
+about this [here](https://sirupsen.com/playlists/).
+
 ### What would I like to improve about reading?
 
 My retention here is still not quite as good as I would like, although I think a
@@ -429,6 +437,10 @@ want, which is difficult. Airtable would be a fantastic candidate for the
 Commonplace book but the physical aspect currently intrigues me.
 
 ![IMG_0960.JPG](https://dynalist.io/u/v5NYGhseS7cUet1VPnFwybMU)
+
+If you're after something similar, [Readwise](https://readwise.io) has a great
+feature to send you some of your highlights every day. Takes minutes to set up
+if you're already using a Kindle.
 
 ### What would I like to improve about processing?
 
