--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -280,7 +280,7 @@ new mental models and an enriched understanding of the world. When you've
 changed the algorithm, you need to re-train it on your data-set consisting of
 your collected experience.
 
-![](https://images.unsplash.com/photo-1505017791108-7b40f307cdc5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=69e65aa3be17aaeab7a164506c1f2df8&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb)
+![](./static/images/fire.jpeg)
 
 __5. Summarize every chapter in your head.__ I don't remember where I read or
 heard this, but someone said that one of the best pieces of advice they'd ever
