static img fire

--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -280,7 +280,7 @@ new mental models and an enriched understanding of the world. When you've
 changed the algorithm, you need to re-train it on your data-set consisting of
 your collected experience.
 
-![](./static/images/fire.jpeg)
+![](/static/images/fire.jpeg)
 
 __5. Summarize every chapter in your head.__ I don't remember where I read or
 heard this, but someone said that one of the best pieces of advice they'd ever
