--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -36,7 +36,7 @@ converts any Instapaper book links into rows in an Airtable. Endorsements from
 trusted sources will be added, too. This script will automatically add metadata
 about the book from Goodreads such as genre, year published, author, and so on.
 
-[![Pasted image](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO)](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO)
+[![Pasted image](/static/images/uuO77yFj0Pfsb6YO0fUdN6ZO.png)](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO)
 
 ### What would I like to improve about choosing?
 
@@ -157,7 +157,7 @@ easy to choose a book especially on a new topic where the __idea__ of knowing
 about it (e.g. basic accounting) sounds intriguing, but you may just not be in
 the right place and time that it's interesting enough for you to follow through.
 
-![Pasted image](https://dynalist.io/u/2RrzgDqDXqbXmmsszgDof3UB) 
+![Pasted image](/static/images/2RrzgDqDXqbXmmsszgDof3UB.png) 
 
 ### What would I like to improve about choosing?
 
@@ -226,7 +226,7 @@ tags [to combine highlights on the fly](https://blog.readwise.io/combine-highlig
 a table of contents. I also highlight words I don't know (or don't use), to
 later [process them into my vocabulary](http://sirupsen.com/airtable/).
 
-![Pasted image](https://dynalist.io/u/drz-b59tNxmTkg47BcAxD-5h)
+![Pasted image](/static/images/drz-b59tNxmTkg47BcAxD-5h.png)
 
 __2. Skimming and skipping.__ I make fairly liberal use of skimming and
 skipping, especially in non-fiction where not every chapter will have an
@@ -378,7 +378,7 @@ at a dining table, every single memory _ever_ that had to do with a table was
 readily available. That'd be pretty uncomfortable. (The eyes with the cupcake on
 top below is my poor imitation of the exploding head emoji: 🤯) 
 
-![Scan Jul 11, 2018, 07.41.jpg](https://dynalist.io/u/o_KP7oCyzXw2ASahKC6kUUZI)
+![Scan Jul 11, 2018, 07.41.jpg](/static/images/o_KP7oCyzXw2ASahKC6kUUZI.png)
 
 Here are some of the steps I do after having read a book that I've done for a while.
 
@@ -390,7 +390,7 @@ highlights from [Readwise.io](http://readwise.io/) to assist in extracting the
 key lessons from the book and throw them into the summary. You can see all my
 reviews on my [Goodreads profile](https://www.goodreads.com/user/show/38623347-simon-eskildsen).
 
-![Pasted image](https://dynalist.io/u/-8pAR7XHj8Cu_QSeiARS_IWC)
+![Pasted image](/static/images/-8pAR7XHj8Cu_QSeiARS_IWC.png)
 
 __2. Converting highlights to index cards.__ Either at the same time as doing
 the review/summary or later, I will go through my highlights and find the ones
@@ -425,7 +425,7 @@ improvement over the long-term. However, I'll need some data first. Below, you
 can see a full list of my symbols. Some are not deprecated, but many I continue
 to use.
 
-![Pasted image](https://dynalist.io/u/d-bxD_1EcycjhEoP_zAV8cf-)
+![Pasted image](/static/images/d-bxD_1EcycjhEoP_zAV8cf-.png)
 
 When I travel, I usually bring the box of unprocessed cards with me and spend
 some time reflecting on those cards. Some call this a "Commonplace Book"; i.e. a
@@ -436,7 +436,7 @@ re-write them for more clarity and backfill the dates. I can sort them however I
 want, which is difficult. Airtable would be a fantastic candidate for the
 Commonplace book but the physical aspect currently intrigues me.
 
-![IMG_0960.JPG](https://dynalist.io/u/v5NYGhseS7cUet1VPnFwybMU)
+![IMG_0960.JPG](/static/images/v5NYGhseS7cUet1VPnFwybMU.png)
 
 If you're after something similar, [Readwise](https://readwise.io) has a great
 feature to send you some of your highlights every day. Takes minutes to set up
