read: add podcast processing step

--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -442,6 +442,13 @@ If you're after something similar, [Readwise](https://readwise.io) has a great
 feature to send you some of your highlights every day. Takes minutes to set up
 if you're already using a Kindle.
 
+__4. Listening to Podcasts with the author__ After a book, I often find myself
+with a slew of questions I wish I could ask the author. That's exactly why they
+get invited to various Podcasts (if they're alive). With [Podcast search
+engines](https://www.listennotes.com/) it's easy to find a Podcast with the
+author. The show notes will often reveal what types of questions the author is
+going after.
+
 ### What would I like to improve about processing?
 
 As mentioned, I may need a new home for these nuggets instead of index cards.
