--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -446,8 +446,8 @@ __4. Listening to Podcasts with the author__ After a book, I often find myself
 with a slew of questions I wish I could ask the author. That's exactly why they
 get invited to various Podcasts (if they're alive). With [Podcast search
 engines](https://www.listennotes.com/) it's easy to find a Podcast with the
-author. The show notes will often reveal what types of questions the author is
-going after.
+author. The show notes will often reveal what types of questions the interviewer
+is going after.
 
 ### What would I like to improve about processing?
 
