read: add airtable import script

--- a/_posts/2018-07-15-read.md
+++ b/_posts/2018-07-15-read.md
@@ -33,8 +33,10 @@ Sourcing), (2: Choosing), (3: Reading), and (4: Processing).
 Whenever I stumble upon a recommendation for a book, I will follow the link to
 Amazon and send the page to Instapaper. I have a script that automatically
 converts any Instapaper book links into rows in an Airtable. Endorsements from
-trusted sources will be added, too. This script will automatically add metadata
-about the book from Goodreads such as genre, year published, author, and so on.
+trusted sources will be added, too. [This
+script](https://gist.github.com/sirupsen/39bd17cbcd713936ccee91d6f5e1b761) will
+automatically add metadata about the book from Goodreads such as genre, year
+published, author, and so on.
 
 [![Pasted image](/static/images/uuO77yFj0Pfsb6YO0fUdN6ZO.png)](https://dynalist.io/u/uuO77yFj0Pfsb6YO0fUdN6ZO)
 
