--- a/_posts/2019-01-25-2018.md
+++ b/_posts/2019-01-25-2018.md
@@ -56,7 +56,7 @@ nightmare for me. If that phase of life hits me, it's clear that my shape will
 be in 3-month chunks, not backpack-increments. Always coming out of jet lag, or
 being about to go in it, was exhausting. That, and the poor seating that invited
 poor posture. Under those conditions, it proved challenging to improve physical
-health. Despite the Gym in Berlin being the best I've frequented yet. It had
+health, despite the Gym in Berlin being the best I've frequented yet. It had
 that dungeon-gym vibe I didn't know I'd craved that badly. The health hit of jet
 lag and transit-nutrition was uplifted by the intimidation factor of the guy
 next to you casually deadlifting 500lbs, with his dog taking a nap on the
@@ -90,7 +90,7 @@ combat that with world-class tooling. One tool we started investing in as a
 team, is that all the applications inside the company have a standard way of
 communicating. We started seeing more and more applications built independently,
 but the tooling for them to leverage each other wasn't improving (for the nerds
-in the crowd: RPC). We've laid the brickwork this year, but this year I'm
+in the crowd: RPC). We've laid the brickwork in 2018, but this year I'm
 confident we'll start to see the first massive benefits within the company from
 this foundational investment. Third, we process about 1 billion jobs in the
 background at Shopify per day. This infrastructure hasn't gotten a lot of love
