--- a/_posts/2019-01-25-2018.md
+++ b/_posts/2019-01-25-2018.md
@@ -3,7 +3,7 @@ layout: post
 title: 2018
 ---
 
-Every year, I spend some time reflecting on the year that past. After reading
+Every year, I spend some time reflecting on the year that passed. After reading
 last year's post, I noticed a fair bit of self-indulgent tangent chasing. Most
 of which should likely have been separate posts. I'm attempting less of that
 this year. I'm continuing to evolve the format, but it'll probably be a few
