--- a/_posts/2019-01-25-2018.md
+++ b/_posts/2019-01-25-2018.md
@@ -4,10 +4,10 @@ title: 2018
 ---
 
 Every year, I spend some time reflecting on the year that passed. After reading
-last year's post, I noticed a fair bit of self-indulgent tangent chasing. Most
-of which should likely have been separate posts. I'm attempting less of that
-this year. I'm continuing to evolve the format, but it'll probably be a few
-years until I settle on one.
+[last year's post](/2017/), I noticed a fair bit of self-indulgent tangent
+chasing. Most of which should likely have been separate posts. I'm attempting
+less of that this year. I'm continuing to evolve the format, but it'll probably
+be a few years until I settle on one.
 
 ## Berlin
 
