--- a/_posts/2017-12-30-2017.md
+++ b/_posts/2017-12-30-2017.md
@@ -98,7 +98,7 @@ Since last year, my cooking has centered around cooking from many different coun
 
 ![](/static/images/shakshuka.jpg)
 
-Since learning that crops for livestock occupy [1/3 of all arable land and that livestock produces about 10-12% of greenhouse emissions](https://en.wikipedia.org/wiki/Environmental_impact_of_meat_production), I felt the need to develop a more sustainable relationship with meat. I still eat meat, but I generally try to consume mostly on special occasions, or about 2 times a week, on average. This has been an interesting constraint and has changed the way I cook at home, too. I haven’t cooked meat at home (except on a few special occasions) for the majority of the year, reserving it for going out. I plan on continuing this development throughout next year. Although, I’m likely adopting a small increase of meat on the weekends because it’s thwarted my progress on my ‘around the world cuisine’ project. Most countries’ main dishes contain meat.
+Since learning that crops for livestock occupy [1/3 of all arable land and that livestock produces about 10-12% of greenhouse emissions](https://en.wikipedia.org/wiki/Environmental_impact_of_meat_production). Beef is [36x less efficient to produce 100g protein](https://www.healthlisted.com/environmental-benefits-of-veganism/) than e.g. peas. I felt the need to develop a more sustainable relationship with meat. I still eat meat, but I generally try to consume mostly on special occasions, or about 2 times a week, on average. This has been an interesting constraint and has changed the way I cook at home, too. I haven’t cooked meat at home (except on a few special occasions) for the majority of the year, reserving it for going out. I plan on continuing this development throughout next year. Although, I’m likely adopting a small increase of meat on the weekends because it’s thwarted my progress on my ‘around the world cuisine’ project. Most countries’ main dishes contain meat.
 
 ## Health
 My workout system hasn’t changed much this year, keeping it consistently at ~3 weight-lifting sessions per week. I haven’t added much strength this year, mostly because I wasn’t paying enough attention to the planning. Late this year, I’ve adopted a cyclic program that has me progress more consistently every month, at a more healthy pace. In my previous program, I’d try to beat the last workout’s PR every time. This often caused me to overdo it in the next workout, leaving me unable to recover for the one after, and then getting back to where I started. I hope this is the change I need to progress to the next level. I’m mostly happy with the regime here, and it keeps my base-level of shape quite good. I lack some aerobic capacity, which I’d like to look into sometime in 2018.
